fixed footer not visible

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,9 +4,9 @@
 
 
 
-* {
+/* * {
   outline: 1px dashed rgb(255, 0, 0);
-};
+}; */
 
 /* *:hover {
 outline: 2px dashed rgb(255, 0, 0);
